Add price when entereing a buy or reinvest transaction

This function was missed when rewriting the transaction editors.

BUG: 507477
FIXED-IN: 5.2.1
(cherry picked from commit 5acb6c6e0d1fc70189dc3fd777917af8761e8694)